# fiji

./: .gitignore  README.md  cloudbuild.yaml
.Q/: PROJECT_FIJI_LLM_SPRINT_PLAN_SRS.md  Software-Requirements-Specifications.md  directives.md  project.md  projectlog.md  sprints.md  srs.md  styling.md  worklog.md
backend/: Dockerfile  README.md  assignments_data.json  events_data.json  firestore_indexes.json  main.py  pyproject.toml  setup_global_working_group.py  test_working_groups_endpoint.py  users_data.json  wg_data.json
backend/dependencies/: __init__.py  auth.py  database.py  rbac.py
backend/models/: assignment.py  donation.py  event.py  invitation.py  organization.py  report.py  role.py  two_factor.py  user.py  working_group.py
backend/routers/: __init__.py  assignments.py  auth.py  donations.py  donations.py.backup  events.py  invitations.py  organization.py  reports.py  roles.py  two_factor.py  uploads.py  users.py  working_groups.py
backend/services/: email_service.py  session_service.py  two_factor_service.py
backend/tests/: conftest.py  test_events.py  test_main.py  test_roles.py  test_working_groups.py
backend/utils/: README.md  add-admin-user.py  cleanup_orphan_assignments.py  create-admin-user.py  create-invitation.py  create-role.py  create_global_working_group.py  firestore_backup_restore.py  initialize_firestore.py  link_orphan_donations.py  password_generator.py  token_generator.py  validate_global_working_group.py
backend/utils/.Q/sessions/: qx_session_20250525_111645.json  qx_session_20250525_113517.json
docs/: functional-specs.md  (+4 more)
(+84 files in other folders)
