[project]
name = "fiji-backend"
version = "0.1.0"
description = "Backend for Fiji project"
authors = [
    {name = "Transparently.AI", email = "info@transparently.ai"},
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.1",
    "firebase-admin>=6.5.0",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "google-cloud-firestore>=2.16.0",
    "google-auth>=2.28.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "itsdangerous>=2.1.2",
    "python-multipart>=0.0.9", # For form data, file uploads
    "sendgrid>=6.11.0",
    "pyjwt>=2.8.0",
    "google-cloud-secret-manager>=2.19.0",
    "python-dateutil>=2.9.0.post0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.hatch.metadata]
allow-direct-references = true
